--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.aseprite filter=lfs diff=lfs merge=lfs -text
+*.flp filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
