--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,5 +1,6 @@
 module(name = "piu-piu")
 
+bazel_dep(name = "flatbuffers", version = "25.2.10")
 bazel_dep(name = "rules_cc", version = "0.2.12")
 bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
 
