--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,8 +1,25 @@
 module(name = "piu-piu")
 
 bazel_dep(name = "flatbuffers", version = "25.2.10")
+bazel_dep(name = "nlohmann_json", version = "3.12.0")
 bazel_dep(name = "rules_cc", version = "0.2.12")
 bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
+bazel_dep(name = "rules_python", version = "1.6.3")
+
+python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+python.defaults(python_version = "3.14")
+python.toolchain(python_version = "3.14")
+
+uv = use_extension("@rules_python//python/uv:uv.bzl", "uv", dev_dependency = True)
+uv.configure(version = "0.9.2")
+
+pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+pip.parse(
+    hub_name = "piu-piu-python-deps",
+    python_version = "3.14",
+    requirements_lock = "//:requirements.txt",
+)
+use_repo(pip, "piu-piu-python-deps")
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
