--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,6 +5,7 @@ bazel_dep(name = "nlohmann_json", version = "3.12.0")
 bazel_dep(name = "rules_cc", version = "0.2.12")
 bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
 bazel_dep(name = "rules_python", version = "1.6.3")
+bazel_dep(name = "yaml-cpp", version = "0.8.0")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 python.defaults(python_version = "3.14")
