--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "flatbuffers>=25.9.23",
     "pydantic>=2.12.3",
     "pydantic-yaml>=1.6.0",
     "pyyaml>=6.0.3",
