--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,6 +2,7 @@ module(name = "piu-piu")
 
 bazel_dep(name = "flatbuffers", version = "25.2.10")
 bazel_dep(name = "nlohmann_json", version = "3.12.0")
+bazel_dep(name = "rapidyaml", version = "0.9.0")
 bazel_dep(name = "rules_cc", version = "0.2.12")
 bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
 bazel_dep(name = "rules_python", version = "1.6.3")
