--- a/src/packer/BUILD.bazel
+++ b/src/packer/BUILD.bazel
@@ -2,7 +2,8 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
 
 cc_binary(
     name = "pack",
-    srcs = ["main.cpp"],
+    srcs = ["pack.cpp"],
+    visibility = ["//visibility:public"],
     deps = [
         "//src/data",
         "@yaml-cpp",
