Write my own compilation database aspect and rule

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,7 @@
-common --copt=-std=c++26
 common --compilation_mode=dbg
-common --copt=-fdiagnostics-color
+
+common --copt=-std=c++26 --host_copt=-std=c++26
+common --copt=-fdiagnostics-color --host_copt=-fdiagnostics-color
 
 common --per_file_copt=//src/.*@-Wall,-Wextra,-Wpedantic
 common --per_file_copt=//src/.*@-Werror
