--- a/src/piu-piu/BUILD.bazel
+++ b/src/piu-piu/BUILD.bazel
@@ -7,5 +7,6 @@ cc_binary(
         "timer.cpp",
         "timer.hpp",
     ],
+    visibility = ["//visibility:public"],
     deps = ["//src/sdlxx"],
 )
