--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_python//python/uv:lock.bzl", "lock")
-load("//bazel:compdb.bzl", "compdb")
+load("@snailbaron-compilation-database//:compdb.bzl", "compilation_database")
 
 lock(
     name = "requirements",
@@ -7,10 +7,13 @@ lock(
     out = "requirements.txt",
 )
 
-compdb(
+compilation_database(
     name = "compdb",
     srcs = [
+        "//src/data",
         "//src/packer:pack",
         "//src/piu-piu",
+        "//src/sdlxx",
+        "//src/x",
     ],
 )
