Update compilation database, reorder default include dirs

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -17,6 +17,7 @@ compilation_database(
         "//src/sdlxx",
         "//src/x",
     ],
+    add_builtin_include_directories = True,
 )
 
 bazel_env(
