--- a/src/packer/BUILD.bazel
+++ b/src/packer/BUILD.bazel
@@ -9,3 +9,16 @@ cc_binary(
         "@yaml-cpp",
     ],
 )
+
+cc_binary(
+    name = "unpack",
+    srcs = [
+        "unpack.cpp",
+        "//src/data:data_header",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/data",
+        "@yaml-cpp",
+    ],
+)
