--- a/src/piu-piu/BUILD.bazel
+++ b/src/piu-piu/BUILD.bazel
@@ -3,10 +3,17 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
 cc_binary(
     name = "piu-piu",
     srcs = [
+        "config.hpp",
         "main.cpp",
         "timer.cpp",
         "timer.hpp",
     ],
+    data = [
+        "//assets:data",
+    ],
     visibility = ["//visibility:public"],
-    deps = ["//src/sdlxx"],
+    deps = [
+        "//src/data",
+        "//src/sdlxx",
+    ],
 )
